Initial OAuth2 Security Layer

--- a/unara-backend/src/main/resources/application.properties
+++ b/unara-backend/src/main/resources/application.properties
@@ -6,5 +6,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=update
 spring.devtools.restart.enabled=false
-allowed.origin=${ALLOWED_ORIGIN}
+logging.level.org.springframework.security=DEBUG
+
+spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.scope=user:email
+spring.security.oauth2.client.registration.github.redirect-uri=${ALLOWED_ORIGIN}
+spring.security.oauth2.client.registration.github.authorization-grant-type=authorization_code
+spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+spring.security.oauth2.client.provider.github.user-name-attribute=id
 
